fixes layout spacing for choices div

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     min-height: 100vh;
     display: grid;
-    grid-template-rows:60px 1fr 160px;
+    grid-template-rows:60px 600px 160px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     margin: auto;
